--- a/src/style/App.css
+++ b/src/style/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #f2f4f900;
+  background-color:#444447;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -38,4 +38,25 @@ h1{
   font-size: 200px;
   margin-top: 0px;
   margin-bottom: 0px;
+  /* color: rgb(0, 208, 255); */
+  color: black;
+}
+
+.inputline{
+  padding-top: 60px;
+  background-color: white;
+  padding-bottom: 60px;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-shadow: 0 10px 25px 0 rgba(14, 12, 12, 0.88);
+}
+
+.linkline{
+    color: inherit;
+    text-decoration: none;
+}
+
+.linkline:hover {
+  color: #2a954a;
+  font-weight: bold;
 }
